# hoa-moe

./: .autocorrectrc  .gitignore  .gitmodules  .prettierignore  .prettierrc  AGENTS.md  AUTO1001_cards.txt  AUTO2003A_cards.txt  AUTO2003B_cards.txt  AUTO2005_cards.txt  AUTO2006_cards.txt  AUTO3001A_cards.txt  AUTO3001B_cards.txt  AUTO3002A_cards.txt  AUTO3002B_cards.txt  AUTO3003_cards.txt  AUTO3004_cards.txt  AUTO3005_cards.txt  AUTO3006_cards.txt  AUTO3007_cards.txt  AUTO3011_cards.txt  AUTO3012_cards.txt  AUTO3016_cards.txt  AUTO3019_cards.txt  AUTO3022_cards.txt  AUTO3024_cards.txt  AUTO3028_cards.txt  AUTO3099_cards.txt  AUTO5001_cards.txt  AUTO5002_cards.txt  AUTO5005_cards.txt  AUTO5013_cards.txt  AUTO5023_cards.txt  AUTO5024_cards.txt  CHEM1012_cards.txt  COMP1011_cards.txt  COMP2008_cards.txt  COMP2010_cards.txt  COMP2012_cards.txt  COMP2014_cards.txt  (+121 more)
scripts/: fetch_opened_prs_and_issues.py  filetrees.json  gen_image.py  gen_links.py  gen_news.py  gen_repo_update_time.py  netdisk_notice.txt  news_generation.py  notice.txt  pyproject.toml  requirements.txt  sponsor.txt  support_us.txt  temp_notice.txt  update_about.py  weekly.py  wrap_badge.py  wrap_badges.py
scripts/about/: update_about.py
scripts/courses/: build_course_pages.py  fetch_opened_prs_and_issues.py  gen_links.py  gen_repo_update_time.py  wrap_badges.py
scripts/filetrees/: __init__.py  filetree_manager.py  filetrees.json
scripts/infos/: sponsor.txt
scripts/news/: cleanup_weekly_reports.py  gen_image.py  gen_news.py  generate.py
scripts/workflows/: build_course_pages.sh  fetch_repos.sh  (+4 more)
(+547 files in other folders)
