[project]
name = "hoa-moe"
version = "0.1.0"
description = "HITSZ OpenAuto Website "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "certifi>=2025.4.26",
    "fs>=2.4.16",
    "openai>=1.99.9",
    "pillow>=11.2.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "tenacity>=9.1.2",
    "urllib3>=2.4.0",
]
